--- a/inmotion/build.gradle
+++ b/inmotion/build.gradle
@@ -69,7 +69,7 @@ publishing {
 
 
             afterEvaluate {
-                from components.release
+                from components.findByName('release')
             }
         }
     }
