--- a/inmotion/build.gradle
+++ b/inmotion/build.gradle
@@ -78,11 +78,9 @@ publishing {
             name = 'repsyMavenRepository'
             url = uri("https://repo.repsy.io/mvn/jhshadi/inmotion")
             credentials {
-                localPropertiesFile = project.rootProject.file('local.properties')
                 Properties properties = new Properties()
-
-                if (localPropertiesFile.exists()) {
-                    properties.load(localPropertiesFile.newDataInputStream())
+                if (project.rootProject.file('local.properties').exists()) {
+                    properties.load(project.rootProject.file('local.properties').newDataInputStream())
                 }
 
                 username = properties.getProperty('repsyMavenUsername') ?: System.getenv("REPSY_MAVEN_USERNAME")
