--- a/inmotion/build.gradle
+++ b/inmotion/build.gradle
@@ -101,5 +101,5 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
-    implementation libs.opencv
+    api libs.opencv
 }
